# interstellar

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.af1a7b8  CMakeLists.txt.user.fb46556  README.md  acceleration.csv  ini_generator.py  projects_ray  projects_relativistic  robust.sh  run.sh  submission.md
.qtcreator/: CMakeLists.txt.user.fb46556
inis/: brick_cone.ini  brick_cone_bump.ini  brick_cone_texture.ini  brick_cylinder.ini  brick_cylinder_bump.ini  brick_cylinder_texture.ini  brick_spheres.ini  brick_spheres_bump.ini  brick_spheres_texture.ini  brick_wall.ini  brick_wall_bump.ini  brick_wall_texture.ini  cone_checkerboard.ini  cube_bilinear.ini  cylinder_checkerboard.ini  earth.ini  earth_bump.ini  earth_texture.ini  moire_checkerboard.ini  repeat_test.ini  repeat_test_bump.ini  repeat_test_texture.ini  sphere_checkerboard.ini  unit_checkerboard.ini  with_acceleration.ini  without_acceleration.ini
scenefiles/: brick_cone.json  brick_cylinder.json  brick_spheres.json  brick_wall.json  brown_campus.json  campus_through.json  cone_checkerboard.json  cube_bilinear.json  cylinder_checkerboard.json  dissapear_demo.json  lower_sphere_arrow_lower.json  lower_sphere_arrow_no_wormhole.json  lower_sphere_arrow_upper.json  lower_sphere_blank.json  lower_sphere_distortion_lower.json  lower_sphere_distortion_upper.json  moire_checkerboard.json  multi_dim_demo.json  orbit_around.json  paris_to_london.json  recursive_sphere_10.json  recursive_sphere_2.json  recursive_sphere_3.json  recursive_sphere_4.json  recursive_sphere_5.json  recursive_sphere_6.json  recursive_sphere_7.json  recursive_sphere_8.json  recursive_sphere_9.json  repeat_test.json  saturn.json  saturn_go_up.json  saturn_high_res.json  saturn_high_res_long.json  saturn_long.json  saturn_thin.json  saturn_thin_path.json  saturn_through.json  saturn_wide.json  saturn_wide_object_path.json  (+26 more)
scenefiles/textures/: bricks_height.old
src/: camerapath.cpp  camerapath.h  framedata.cpp  framedata.h  lighting.cpp  lighting.h  main.cpp  main.cpp.autosave  raytrace.cpp  raytrace.h  renderer.cpp  renderer.h  textures.cpp  textures.h
src/camera/: camera.cpp  camera.h
src/raytracer/: intersector.cpp  intersector.h  kdtree.cpp  kdtree.h  lighting.cpp  lighting.h  raytracer.cpp  raytracer.h  raytracescene.cpp  raytracescene.h  textures.cpp  textures.h
src/utils/: imagereader.cpp  ini_utils.cpp  ini_utils.h  rgba.h  scenefileparser.cpp  scenefileparser.h  sceneparser.cpp  sceneparser.h  structs.h
